# unix_socket_note

./: CMakeLists.txt  README.md  clion_launch_cpp.sh  main.cpp
test/: CMakeLists.txt  openfile.cpp  test.txt
unix_I_O_FILE/: IO_File.h  IO_File_creat-open-read-close.cpp  IO_File_stat.cpp  IO_head.h  IO_read_write.cpp  IO_readv_writev.cpp  IO_recv_send.cpp  IO_recvfrom_sendto.cpp  IO_recvmsg_sendmsg.cpp  sctp_recvmsg_sendmsg.cpp
unix_I_O_control/: IO_fcntl.cpp  IO_fcntl.h  IO_ioctl_socket.cpp  IO_ioctl_socket.h  route.cpp
unix_common_include/: error_print.h  get_time_debug.h  if_quit_or_run.h  rtt.h  sctp_bind_list.h  sctp_event.h  sctp_wrap.h  service_accept.h  sock_addr_config.h  sock_fd_select_timeo.h  sock_ntop_pton.h  stdin_input.h  tcp_OOB_heartbeat.h  tcp_client_socket_connect_addrinfo.h  tcp_service_socket_bind_listen_addrinfo.h  udp_client_socket_connect_config_addrinfo.h  udp_service_socket_bind_addrinfo.h  wrap_family_convert.h  wrap_sockopt.h  zcq_config.h  zcq_header.h
unix_common_lib/: error_print.cpp  get_time_debug.cpp  if_quit_or_run.cpp  rtt.cpp  sctp_bind_list.cpp  sctp_event.cpp  sctp_wrap.cpp  service_accept.cpp  sock_addr_config.cpp  sock_fd_select_timeo.cpp  sock_ntop_pton.cpp  sock_options.cpp  stdin_input.cpp  tcp_OOB_heartbeat_client_call.cpp  tcp_OOB_heartbeat_service_echo.cpp  tcp_client_socket_connect_addrinfo.cpp  tcp_service_socket_bind_listen_addrinfo.cpp  udp_client_socket_connect_config_addrinfo.cpp  udp_service_socket_bind_addrinfo.cpp  wrap_family_convert.cpp  wrap_sockopt.cpp
unix_echo_call_include/: sctp_client_call.h  sctp_service_echo.h  tcp_client_call.h  tcp_service_echo.h  udp_client_call.h  udp_service_echo.h
unix_echo_call_lib/: sctp_client_call.cpp  sctp_service_echo.cpp  tcp_client_call.cpp  tcp_client_call_IO_kqueue.cpp  tcp_client_call_IO_nonblock_select.cpp  tcp_client_call_IO_poll.cpp  tcp_client_call_IO_select.cpp  tcp_client_call_fork.cpp  tcp_service_echo.cpp  tcp_service_echo_IO_epoll.cpp  udp_client_call.cpp  udp_client_call_broadcast.cpp  udp_client_call_rtt.cpp  udp_client_call_timeo.cpp  udp_service_echo.cpp
unix_ip_host_serv_addr_name/: get_addr_info.cpp  get_name_info.cpp  get_sock_peer_ip.cpp  gethost_by_name_addr.cpp  gethost_by_name_addr_r.cpp  getserv_by_name_port.cpp  getserv_by_name_port_r.cpp  ip_port_addrs_names.h  ip_to_bin.cpp
unix_local/: unix_DGRAM_client.cpp  unix_DGRAM_service.cpp  unix_STREAM_client_one.cpp  unix_STREAM_service_IO_epoll.cpp  unix_STREAM_service_fork_Signal.cpp  unix_socketpair_test.cpp
unix_parent-udp_child-tcp/: udp_tcp_service_fork_Signal_IO_select.cpp
unix_process/: cpp_log.cpp  process_create_fork_exec_system_popen.cpp  process_daemon.cpp  process_msg.cpp  process_pipe.cpp  process_signal.cpp  unix_process.h
unix_pthread/: pthread_tcp_client_addrinfo.cpp  pthread_tcp_service_addrinfo.cpp
unix_pthread/pthread_POSIX/: pthread.cpp  pthread_lock_RW.cpp  pthread_lock_condition.cpp  pthread_lock_mutex.cpp  pthread_lock_semaphore.cpp
unix_pthread/thread_std/: cpp_thread.cpp  pthread_lock_condition.cpp  thread_lock_RW.cpp  thread_lock_mutex.cpp  thread_lock_semaphore.cpp
unix_pthread/thread_std/01_thread/: 03_ThreadLambda.cpp  04_ThreadMemFunc.cpp
unix_pthread/thread_std/03_atomic/: 01_is_lock_free.cpp  03_inc_func_atomic.cpp  04_inc_func_atomic_optimal.cpp
unix_pthread/thread_std/04_mutex/: 01_multiple_locks.cpp
unix_pthread/thread_std/thread_pool/: Linux_IO_error.h  main.cpp  thread_pool.cpp  thread_pool.h
unix_sctp/: sctp_client.cpp  sctp_client_event.cpp  sctp_service.cpp  sctp_service_AutoCloseClient.cpp  sctp_service_event.cpp  sctp_service_fork.cpp
unix_tcp/: tcp_client_for.cpp  tcp_client_one.cpp  tcp_client_one_addrinfo.cpp  tcp_client_one_byNamePort.cpp  tcp_service_IO_epoll_addrinfo.cpp  tcp_service_IO_nonblock_select.cpp  tcp_service_IO_poll.cpp  tcp_service_IO_poll_addrinfo.cpp  tcp_service_IO_select.cpp  tcp_service_daemon_inetd.cpp  tcp_service_fork.cpp  tcp_service_fork_Signal.cpp
unix_tcp_outdata/: tcp_client_OOB.cpp  tcp_client_OOB_heartbeat_select.cpp  tcp_service_OOB_Signal_Setsockopt.cpp  tcp_service_OOB_heartbeat_fork_Signal.cpp  tcp_service_OOB_nonblock_select.cpp
unix_tcp_web/: tcp_client_nonblock_select_web.cpp  tcp_client_pthread_web.cpp  tcp_client_web.h
unix_udp/: udp_client_broadcast.cpp  udp_client_one.cpp  udp_client_one_addrinfo.cpp  udp_client_one_config.cpp  udp_service.cpp  udp_service_addrinfo.cpp  udp_service_addrinfo_daemon_syslog.cpp  udp_service_bind_all_IPv4.cpp
unix_udp_multicast/: multicast.h  multicast_join.cpp  multicast_leave.cpp  multicast_set_get_IF.cpp  multicast_set_get_LOOP.cpp  multicast_set_get_TTL_HOPS.cpp  multicast_un_block_source.cpp  udp_client_multicast_SNTP.cpp  udp_multicast.cpp  udp_service_multicast_SAPSDP.cpp
